Fix #165 Open collective member list is cut off on mobile

--- a/src/_assets/scss/_tdevs_custom.scss
+++ b/src/_assets/scss/_tdevs_custom.scss
@@ -156,9 +156,9 @@
 
 .donor-container {
   .donor-block {
-    iframe {
-      height: auto;
-    }
+    // iframe {
+    //   height: auto;
+    // }
   }
 }
 
